simplify some of the report

--- a/inst/APPC_prediction_evaluation.Rmd
+++ b/inst/APPC_prediction_evaluation.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "APPC prediction"
+title: "APPC Model Performance"
 date: "`r Sys.Date()`"
 output: 
   html_document:
@@ -24,88 +24,25 @@ library(data.table)
 library(tmap)
 ```
 
-# Model Training
+```{r "load model and predictions"}
+if(!require(appc)) devtools::load_all()
+library(grf)
+library(dplyr)
 
-```{r, eval=F}
-
-download.file(url = "https://geomarker-io.s3-us-east-2.amazonaws.com/appc/training_data_0.1.0.rds",
-              destfile = "data/training_data.rds")
-
-d_train <- readRDS("data/training_data.rds")
-
-pred_names <-
-  c("x", "y",
-    "doy",
-    "year",
-    "elevation_median_800", "elevation_sd_800",
-    "total_aadt_m_400", "truck_aadt_m_400",
-    "nei_point_id2w_1000",
-    "air.2m", "hpbl", "acpcp", "rhum.2m", "vis", "pres.sfc", "uwnd.10m", "vwnd.10m")
-
-grf <-
-  regression_forest(
-    X = select(d_train, all_of(pred_names)),
-    Y = d_train$conc,
-    seed = 224,
-    num.threads = parallel::detectCores(),
-    num.trees = 100,
-    compute.oob.predictions = TRUE,
-    honesty = FALSE,
-    ## tune.parameters = "all",
-    ## tune.num.trees = 50,
-    ## tune.num.reps = 100,
-    ## tune.num.draws = 1000,
-    tune.parameters = "none",
-    ## mtry = 17, # default effectively uses ncol(X)
-    sample.fraction = 0.5,
-    min.node.size = 5,
-    alpha = 0.05,
-    imbalance.penalty = 0,
-    clusters = as.factor(d_train$s2),
-    equalize.cluster.weights = FALSE
-  )
-
-saveRDS(grf, "output/rf_pm.rds")
-
+d_train <- readRDS(fs::path(fs::path_package("appc"), "training_data.rds"))
+grf <- readRDS(fs::path(fs::path_package("appc"), "rf_pm.rds"))
 ```
 
-# Model evaluation
-
-## OOB prediction
-
-```{r, eval=F}
-
-grf <- readRDS("output/rf_pm.rds")
-
-grf_preds_oob <- predict(grf, estimate.variance = TRUE)
-
-d_out <- select(d_train, s2, date)
-
-d_out$pm_pred_oob <- grf_preds_oob$predictions
-d_out$pm_pred_oob_se <- sqrt(grf_preds_oob$variance.estimates)
-  
-d_out <-
-  d_out |> 
-    mutate_at(vars(starts_with("pm_pred_")), signif, digits = 4)
-
-saveRDS(d_out, "data/st_pm_grf_preds.rds")
-
-```
-
-```{r}
-
+```{r "estimate variance of predictions"}
 d <-
-  readRDS("data/st_pm_grf_preds.rds") |>
-  as_tibble() |>
-  rename(
-    pred = pm_pred_oob,
-    se = pm_pred_oob_se
-  )
-
-d_train <- readRDS("data/training_data.rds")
-
-d <- left_join(d, d_train, by = c("date", "s2")) |> 
-  mutate(year = year(date))
+  grf |>
+  predict(estimate.variance = TRUE) |>
+  tibble::as_tibble() |>
+  transmute(
+    pred = signif(predictions, 2),
+    se = signif(sqrt(variance.estimates), 2),
+    conc = grf$Y.orig) |>
+  bind_cols(select(d_train, s2, date))
 
 d <- d |>
   mutate(lci = pred - se * qnorm(0.025, lower.tail = FALSE),
@@ -115,25 +52,46 @@ d <- d |>
 
 ```
 
-## Prediction accuracy across observations
+```{r "add temporal componentsyear"}
+d$year <- as.numeric(format(d$date, "%Y"))
+d$month <- as.numeric(format(d$date, "%m"))
+d$week <- as.numeric(format(d$date, "%U"))
+```
 
-### Overall
+# Daily Cross-Validated Model Performance
 
 ```{r}
-#' daily prediction errors overall
+library(ggplot2)
+
+the_theme <- 
+  ggplot2::theme_light(base_size = 11) +
+  ggplot2::theme(
+    panel.background = ggplot2::element_rect(fill = "white", colour = NA),
+    panel.border = ggplot2::element_rect(fill = NA, colour = "grey20"),
+    panel.grid.major = ggplot2::element_line(colour = "grey92"),
+    panel.grid.minor = ggplot2::element_blank(),
+    strip.background = ggplot2::element_rect(fill = "grey92", colour = "grey20"),
+    strip.text = ggplot2::element_text(color = "grey20"), legend.key = ggplot2::element_rect(fill = "white", colour = NA),
+    complete = TRUE
+  )
+```
+
+## Overall Prediction Error
+
+```{r}
 d %>%
   summarize(
     mae = median(abs(conc - pred)),
     rmse = sqrt(mean((conc - pred)^2)),
     rsq = cor(conc, pred, use = "pairwise.complete")^2,
-    slope = lm(pred ~ conc - 1, data = .) |> coefficients(),
     ci_coverage = scales::percent(sum(ci_covered) / length(ci_covered))
   ) |>
   knitr::kable(digits = 2)
 ```
 
+## Overall observed versus predicted
+
 ```{r}
-#' plot overall obs versus oob predicted
 d |>
   ggplot(aes(conc, pred)) +
   stat_bin_hex(binwidth = c(0.33, 0.33)) +
@@ -143,9 +101,8 @@ d |>
   ## scale_x_log10(limits = c(1, 650)) + scale_y_log10(limits = c(1, 650)) +
   xlab(expression(Observed ~ paste(PM[2.5], " (", mu, "g/", m^{3}, ") "))) +
   ylab(expression(CV ~ Predicted ~ paste(PM[2.5], " (", mu, "g/", m^{3}, ") "))) +
-  CB::theme_cb() +
-  coord_fixed() +
-  ggtitle("Oob predicted versus observed")
+  the_theme +
+  coord_fixed()
 
 d |>
   ggplot(aes(conc, pred)) +
@@ -156,26 +113,27 @@ d |>
   ## scale_x_log10(limits = c(1, 650)) + scale_y_log10(limits = c(1, 650)) +
   xlab(expression(Observed ~ paste(PM[2.5], " (", mu, "g/", m^{3}, ") "))) +
   ylab(expression(CV ~ Predicted ~ paste(PM[2.5], " (", mu, "g/", m^{3}, ") "))) +
-  CB::theme_cb() +
-  coord_fixed() +
-  ggtitle("Oob predicted versus observed (zoomed)")
+  the_theme +
+  coord_fixed()
 
 ```
 
-### Temporal
+# Annual Cross-Validated Model Performance
+
+## Annual Prediction Error
 
 ```{r}
-#' annual summaries of model performance, and PM2.5 measurements
 d |>
   group_by(year) |>
   summarize(
     n = n(),
-    mean_measured_pm = mean(conc),
     mae = median(abs(conc - pred)),
     rsq = cor(conc, pred, use = "pairwise.complete")^2
   ) |>
   knitr::kable(digits = 2)
 ```
+
+## Annual observed versus predicted
 
 ```{r}
 d |> 
@@ -187,7 +145,7 @@ d |>
   ## scale_x_log10(limits = c(1, 650)) + scale_y_log10(limits = c(1, 650)) +
   xlab(expression(Observed ~ paste(PM[2.5], " (", mu, "g/", m^{3}, ") "))) +
   ylab(expression(Predicted ~ paste(PM[2.5], " (", mu, "g/", m^{3}, ") "))) +
-  CB::theme_cb() +
+  the_theme +
   facet_wrap(year~., ncol = 4) +
   coord_fixed() +
   theme(legend.position = c(0.9, 0.2),
@@ -197,23 +155,19 @@ d |>
         legend.box = "hortizontal",
         legend.key.height = unit(4, "mm"),
         legend.key.width = unit(9, "mm")) +
-  guides(fill = guide_colorbar(title.position = "top", title.hjust = 0.5)) +
-  ggtitle("Oob predicted versus observed by year")
+  guides(fill = guide_colorbar(title.position = "top", title.hjust = 0.5))
 
 ```
 
-## Prediction accuracy across s2 geometries (level 30)
+# Prediction accuracy across s2 geometries (level 30)
+
+Aggregate predictions, actuals, and standard errors for different time periods, for each s2 cell.
 
 ```{r}
-#' for each site, generate predictions for daily pm2.5 and averages for week, month, year, and and entire time period
+library(data.table)
 
 d <- as.data.table(d, key = c("s2", "year", "date"))
-d$month <- lubridate::month(d$date)
-d$week <- lubridate::week(d$date)
 
-#' aggregate predictions, actuals, and standard errors for different time periods, for each s2 cell
-
-# function to add CIs and summarize error by a given time frame
 add_mean_CIs_and_summarize_error <- function(x) {
   x |>
     mutate(lci = mean_pm_pred - mean_pm_se * qnorm(0.025, lower.tail = FALSE),
@@ -226,7 +180,7 @@ add_mean_CIs_and_summarize_error <- function(x) {
       mae = median(abs(mean_pm25 - mean_pm_pred)),
       rmse = sqrt(mean((mean_pm25 - mean_pm_pred)^2)),
       rsq = cor(mean_pm25, mean_pm_pred, use = "pairwise.complete")^2,
-      slope = lm(mean_pm_pred ~ mean_pm25 - 1, data = .) |> coefficients(),
+      ## slope = lm(mean_pm_pred ~ mean_pm25 - 1, data = .) |> coefficients(),
       ci_coverage = scales::percent(sum(ci_covered) / length(ci_covered))
     )
 }
@@ -290,13 +244,12 @@ d_temporal_cv$daily <-
 
 d_temporal_cv <-
   tibble::enframe(d_temporal_cv, name = "time") |>
-  unnest(cols = c(value))
+  tidyr::unnest(cols = c(value))
 
 d_temporal_cv$time <-
   d_temporal_cv$time |>
   factor(levels = c("all", "annual", "monthly", "weekly", "daily"))
 
-#saveRDS(d_temporal_cv, glue::glue("{cv_out_folder}/d_temporal_cv.rds"))
 ```
 
 ### Temporal
@@ -306,11 +259,9 @@ d_temporal_cv |>
   group_by(time) |>
   summarize(
     median_n_time_units = median(n_time_units, na.rm = TRUE),
-    median_n_observations = median(n_observations, na.rm = TRUE),
     median_mae = median(mae, na.rm = TRUE),
     median_rmse = median(rmse, na.rm = TRUE),
     median_rsq = median(rsq, na.rm = TRUE),
-    median_slope = median(slope, na.rm = TRUE),
     median_ci_coverage = median(as.numeric(sub("%", "", ci_coverage)), na.rm = TRUE),
     .groups = "keep"
   ) |>
@@ -319,18 +270,16 @@ d_temporal_cv |>
 d_temporal_cv |>
   ggplot(aes(time, mae)) +
   geom_boxplot() +
-  CB::theme_cb() +
+  the_theme +
   ylab(expression(paste(CV~MAE~(ug/m^3)))) +
-  xlab("Temporal Aggregation Window") +
-  ggtitle("CV median absolute error")
+  xlab("Temporal Aggregation Window")
 
 d_temporal_cv |>
   ggplot(aes(time, rsq)) +
   geom_boxplot() +
-  CB::theme_cb() +
+  the_theme +
   ylab(expression(paste(CV~R^2))) +
-  xlab("Temporal Aggregation Window") +
-  ggtitle("CV rsq")
+  xlab("Temporal Aggregation Window")
 
 ```
 
