--- a/inst/APPC_prediction_evaluation.Rmd
+++ b/inst/APPC_prediction_evaluation.Rmd
@@ -1,34 +1,30 @@
 ---
-title: "APPC Model Performance"
+title: "Spatiotemporal Cross-Validated Model Performance"
 date: "`r Sys.Date()`"
-output: 
-  html_document:
-        toc: true
-        toc_float: 
-            collapsed: false
-            smooth_scroll: true
-        code_download: true
-        code_folding: hide
-        highlight: pygments
-        df_print: kable
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
-library(tidyverse)
-library(grf)
-library(sf)
-library(s2)
-library(hexbin)
-library(data.table)
-library(tmap)
-```
+knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE)
 
-```{r "load model and predictions"}
 if(!require(appc)) devtools::load_all()
 library(grf)
 library(dplyr)
+library(ggplot2)
 
+the_theme <- 
+  ggplot2::theme_light(base_size = 11) +
+  ggplot2::theme(
+    panel.background = ggplot2::element_rect(fill = "white", colour = NA),
+    panel.border = ggplot2::element_rect(fill = NA, colour = "grey20"),
+    panel.grid.major = ggplot2::element_line(colour = "grey92"),
+    panel.grid.minor = ggplot2::element_blank(),
+    strip.background = ggplot2::element_rect(fill = "grey92", colour = "grey20"),
+    strip.text = ggplot2::element_text(color = "grey20"), legend.key = ggplot2::element_rect(fill = "white", colour = NA),
+    complete = TRUE
+  )
+```
+
+```{r "load model and predictions"}
 d_train <- readRDS(fs::path(fs::path_package("appc"), "training_data.rds"))
 grf <- readRDS(fs::path(fs::path_package("appc"), "rf_pm.rds"))
 ```
@@ -52,31 +48,13 @@ d <- d |>
 
 ```
 
-```{r "add temporal componentsyear"}
+```{r "add temporal components"}
 d$year <- as.numeric(format(d$date, "%Y"))
 d$month <- as.numeric(format(d$date, "%m"))
 d$week <- as.numeric(format(d$date, "%U"))
 ```
 
-# Daily Cross-Validated Model Performance
-
-```{r}
-library(ggplot2)
-
-the_theme <- 
-  ggplot2::theme_light(base_size = 11) +
-  ggplot2::theme(
-    panel.background = ggplot2::element_rect(fill = "white", colour = NA),
-    panel.border = ggplot2::element_rect(fill = NA, colour = "grey20"),
-    panel.grid.major = ggplot2::element_line(colour = "grey92"),
-    panel.grid.minor = ggplot2::element_blank(),
-    strip.background = ggplot2::element_rect(fill = "grey92", colour = "grey20"),
-    strip.text = ggplot2::element_text(color = "grey20"), legend.key = ggplot2::element_rect(fill = "white", colour = NA),
-    complete = TRUE
-  )
-```
-
-## Overall Prediction Error
+## Overall Leave One Location Out (LOLO) Accuracy
 
 ```{r}
 d %>%
@@ -88,8 +66,6 @@ d %>%
   ) |>
   knitr::kable(digits = 2)
 ```
-
-## Overall observed versus predicted
 
 ```{r}
 d |>
@@ -118,9 +94,7 @@ d |>
 
 ```
 
-# Annual Cross-Validated Model Performance
-
-## Annual Prediction Error
+### Overall LOLO by Year
 
 ```{r}
 d |>
@@ -133,9 +107,8 @@ d |>
   knitr::kable(digits = 2)
 ```
 
-## Annual observed versus predicted
-
 ```{r}
+#| include: false
 d |> 
   ggplot(aes(conc, pred)) +
   stat_bin_hex(binwidth = c(0.2, 0.2))+
@@ -159,7 +132,7 @@ d |>
 
 ```
 
-# Prediction accuracy across different cumulative exposure windows
+## Median LOLO Accuracy Per Temporal Aggregation Period
 
 Aggregate predictions, actuals, and standard errors for different time periods, for each s2 cell.
 
@@ -281,7 +254,9 @@ d_temporal_cv |>
 
 ```
 
-# Prediction accuracy across spatial regions (level 5 S2 polygons)
+## Median LOLO Accuracy Per Spatial Aggregation Period
+
+Level 5 s2 polygons
 
 ```{r}
 library(s2)
