--- a/inst/APPC_prediction_evaluation.Rmd
+++ b/inst/APPC_prediction_evaluation.Rmd
@@ -29,6 +29,29 @@ d_train <- readRDS(fs::path(fs::path_package("appc"), "training_data.rds"))
 grf <- readRDS(fs::path(fs::path_package("appc"), "rf_pm.rds"))
 ```
 
+## Variable Importance
+
+```{r "variable importance"}
+
+pred_names <-
+  c("x", "y",
+    "doy", "year",
+    "elevation_median_800", "elevation_sd_800",
+    "total_aadt_m_400", "truck_aadt_m_400",
+    "air.2m", "hpbl", "acpcp", "rhum.2m", "vis", "pres.sfc", "uwnd.10m", "vwnd.10m",
+    ## "merra_pm25",
+    "merra_dust", "merra_oc", "merra_bc", "merra_ss", "merra_so4",
+    "nei_point_id2w_1000",
+    "smoke_pm")
+
+tibble(importance = round(variable_importance(grf), 3),
+       variable = names(select(d_train, all_of(pred_names)))) |>
+  arrange(desc(importance)) |>
+  knitr::kable()
+```
+
+## LOLO Model Accuracy
+
 ```{r "estimate variance of predictions"}
 d <-
   grf |>
@@ -39,13 +62,10 @@ d <-
     se = signif(sqrt(variance.estimates), 2),
     conc = grf$Y.orig) |>
   bind_cols(select(d_train, s2, date))
-
 d <- d |>
   mutate(lci = pred - se * qnorm(0.025, lower.tail = FALSE),
          uci = pred + se * qnorm(0.025, lower.tail = FALSE),
-         ci_length = uci - lci,
          ci_covered = conc < uci & conc > lci)
-
 ```
 
 ```{r "add temporal components"}
@@ -54,225 +74,124 @@ d$month <- as.numeric(format(d$date, "%m"))
 d$week <- as.numeric(format(d$date, "%U"))
 ```
 
-## Overall Leave One Location Out (LOLO) Accuracy
+Leave-one-location-out (LOLO) accuracy is calculated by using out of bag predictions from the trained random forest with resample clustering by the location.
 
-```{r}
-d %>%
-  summarize(
-    mae = median(abs(conc - pred)),
-    rmse = sqrt(mean((conc - pred)^2)),
-    rsq = cor.test(conc, pred, method = "spearman", exact = FALSE)$estimate,
-    ci_coverage = scales::percent(sum(ci_covered) / length(ci_covered))
-  ) |>
+Accuracy metrics are calculated for each left out location and then summarized using the median accuracy statistic across all locations. This most closely captures the performance in a real-world scenario where we are trying to predict air pollution between 2017 and 2023 in a place where it was not measured. 
+
+Each left-out location, or AQS monitor, contains a variable number of days with air pollution measurements.  This depends on the frequency of the daily measurements as well as when the monitoring station was initiated or deprecated. Some stations-time groupings only have a single measurement; exclude any station or station-time grouping that has 4 or less observations.
+
+### Daily
+
+```{r "daily accuracy"}
+d |>
+  nest_by(s2) |>
+  mutate(n_obs = c(nrow(data))) |>
+  filter(n_obs > 4) |>
+  mutate(mae = c(median(abs(data$conc - data$pred))),
+         rho = c(cor.test(data$conc, data$pred, method = "spearman", exact = FALSE)$estimate),
+         ci_coverage = c(sum(data$ci_covered) / length(data$ci_covered))) |>
+  ungroup() |>
+  summarize(mae = median(mae),
+            rho = median(rho),
+            ci_coverage = scales::percent(median(ci_coverage)),
+            median_n_obs_per_grouping = median(n_obs)) |>
   knitr::kable(digits = 2)
 ```
 
-```{r}
+#### Actual PM2.5 Concentrations vs LOLO Daily Predictions
+
+```{r "daily pred vs actual plot"}
 d |>
   ggplot(aes(conc, pred)) +
-  stat_bin_hex(binwidth = c(0.33, 0.33)) +
-  viridis::scale_fill_viridis(option = "C", name = "Count") +
+  stat_bin_hex(binwidth = c(0.05, 0.05)) +
+  viridis::scale_fill_viridis(option = "C", trans = "log10", name = "Number \nof points") +
   geom_abline(slope = 1, intercept = 0, lty = 2, alpha = 0.8, color = "darkgrey") +
-  xlim(c(0, 75)) + ylim(c(0, 75)) +
-  ## scale_x_log10(limits = c(1, 650)) + scale_y_log10(limits = c(1, 650)) +
+  scale_x_log10(limits = c(1, 650)) + scale_y_log10(limits = c(1, 650)) +
   xlab(expression(Observed ~ paste(PM[2.5], " (", mu, "g/", m^{3}, ") "))) +
   ylab(expression(CV ~ Predicted ~ paste(PM[2.5], " (", mu, "g/", m^{3}, ") "))) +
   the_theme +
+  theme(legend.position = c(0.85, 0.2)) +
   coord_fixed()
-
-d |>
-  ggplot(aes(conc, pred)) +
-  stat_bin_hex(binwidth = c(0.33, 0.33))+
-  viridis::scale_fill_viridis(option = "C", name = "Count") +
-  geom_abline(slope = 1, intercept = 0, lty = 2, alpha = 0.8, color = "darkgrey") +
-  xlim(c(0, 15)) + ylim(c(0, 15)) +
-  ## scale_x_log10(limits = c(1, 650)) + scale_y_log10(limits = c(1, 650)) +
-  xlab(expression(Observed ~ paste(PM[2.5], " (", mu, "g/", m^{3}, ") "))) +
-  ylab(expression(CV ~ Predicted ~ paste(PM[2.5], " (", mu, "g/", m^{3}, ") "))) +
-  the_theme +
-  coord_fixed()
-
 ```
 
-### Overall LOLO by Year
+#### Daily Prediction Accuracies per Calendar Year
 
-```{r}
+```{r "daily accuracies per year"}
 d |>
+  nest_by(s2, year) |>
+  mutate(n_obs = c(nrow(data))) |>
+  filter(n_obs > 4) |>
+  mutate(mae = c(median(abs(data$conc - data$pred))),
+         rho = c(cor.test(data$conc, data$pred, method = "spearman", exact = FALSE)$estimate),
+         ci_coverage = c(sum(data$ci_covered) / length(data$ci_covered))) |>
   group_by(year) |>
-  summarize(
-    n = n(),
-    mae = median(abs(conc - pred)),
-    rsq = cor(conc, pred, use = "pairwise.complete")^2
-  ) |>
+  summarize(mae = median(mae),
+            rho = median(rho),
+            ci_coverage = scales::percent(median(ci_coverage)),
+            median_n_obs_per_grouping = median(n_obs)) |>
   knitr::kable(digits = 2)
 ```
 
-```{r}
-#| include: false
-d |> 
-  ggplot(aes(conc, pred)) +
-  stat_bin_hex(binwidth = c(0.2, 0.2))+
-  viridis::scale_fill_viridis(option = "C", name = "Count") +
-  geom_abline(slope = 1, intercept = 0, lty = 2, alpha = 0.8, color = "darkgrey") +
-  xlim(c(0, 75)) + ylim(c(0, 75)) +
-  ## scale_x_log10(limits = c(1, 650)) + scale_y_log10(limits = c(1, 650)) +
-  xlab(expression(Observed ~ paste(PM[2.5], " (", mu, "g/", m^{3}, ") "))) +
-  ylab(expression(Predicted ~ paste(PM[2.5], " (", mu, "g/", m^{3}, ") "))) +
-  the_theme +
-  facet_wrap(year~., ncol = 4) +
-  coord_fixed() +
-  theme(legend.position = c(0.9, 0.2),
-        legend.direction = "horizontal",
-        legend.title = element_text(size = 11, family = "sans"),
-        legend.text = element_text(size = 11),
-        legend.box = "hortizontal",
-        legend.key.height = unit(4, "mm"),
-        legend.key.width = unit(9, "mm")) +
-  guides(fill = guide_colorbar(title.position = "top", title.hjust = 0.5))
+### Monthly
 
+Exclude stations with 4 or less total monthly observations.
+
+```{r "monthly accuracies"}
+d |>
+  group_by(s2, year, month) |>
+  summarize(pred = mean(pred),
+            conc = mean(conc),
+            se = mean(sqrt(se^2))) |>
+  mutate(lci = pred - se * qnorm(0.025, lower.tail = FALSE),
+         uci = pred + se * qnorm(0.025, lower.tail = FALSE),
+         ci_covered = conc < uci & conc > lci) |>
+  ungroup() |>
+  nest_by(s2) |>
+  mutate(n_obs = c(nrow(data))) |>
+  filter(n_obs > 4) |>
+  mutate(mae = c(median(abs(data$conc - data$pred))),
+         rho = c(cor.test(data$conc, data$pred, method = "spearman", exact = FALSE)$estimate),
+         ci_coverage = c(sum(data$ci_covered) / length(data$ci_covered))) |>
+  ungroup() |>
+  summarize(mae = median(mae),
+            rho = median(rho),
+            ci_coverage = scales::percent(median(ci_coverage)),
+            median_n_obs_per_grouping = median(n_obs)) |>
+  knitr::kable(digits = 2)
 ```
 
-## Median LOLO Accuracy Per Temporal Aggregation Period
+### Annual
 
-Aggregate predictions, actuals, and standard errors for different time periods, for each s2 cell.
+Exclude stations with 4 or less total annual observations.
 
-```{r}
-library(data.table)
-
-d <- as.data.table(d, key = c("s2", "year", "date"))
-
-add_mean_CIs_and_summarize_error <- function(x) {
-  x |>
-    mutate(lci = mean_pm_pred - mean_pm_se * qnorm(0.025, lower.tail = FALSE),
-           uci = mean_pm_pred + mean_pm_se * qnorm(0.025, lower.tail = FALSE),
-           ci_covered = mean_pm25 <= uci & mean_pm25 >= lci) |>
-    group_by(s2) %>%
-    summarize(
-      n_time_units = n(),
-      n_observations = sum(N),
-      mae = median(abs(mean_pm25 - mean_pm_pred)),
-      rmse = sqrt(mean((mean_pm25 - mean_pm_pred)^2)),
-      rsq = cor.test(mean_pm25, mean_pm_pred, method = "spearman", exact = FALSE)$estimate,
-      ## slope = lm(mean_pm_pred ~ mean_pm25 - 1, data = .) |> coefficients(),
-      ci_coverage = scales::percent(sum(ci_covered) / length(ci_covered))
-    )
-}
-
-d_temporal_cv <- list()
-
-## # alltime
-## d_temporal_cv$all <-
-##   d[,
-##     .(.N,
-##       mean_pm25 = mean(conc),
-##       mean_pm_pred = mean(pred),
-##       mean_pm_se = sqrt(sum(se^2))),
-##     by = c("s2")
-##   ] |>
-##   add_mean_CIs_and_summarize_error()
-
-# annual
-d_temporal_cv$annual <-
-  d[,
-    .(.N,
-      mean_pm25 = mean(conc),
-      mean_pm_pred = mean(pred),
-      mean_pm_se = sqrt(sum(se^2))),
-    by = c("s2", "year")
-  ] |>
-  add_mean_CIs_and_summarize_error()
-
-# monthly
-d_temporal_cv$monthly <-
-  d[,
-    .(.N,
-      mean_pm25 = mean(conc),
-      mean_pm_pred = mean(pred),
-      mean_pm_se = sqrt(sum(se^2))),
-    by = c("s2", "year", "month")
-  ] |>
-  add_mean_CIs_and_summarize_error()
-
-# weekly
-d_temporal_cv$weekly <-
-  d[,
-    .(.N,
-      mean_pm25 = mean(conc),
-      mean_pm_pred = mean(pred),
-      mean_pm_se = sqrt(sum(se^2))),
-    by = c("s2", "year", "week")
-  ] |>
-  add_mean_CIs_and_summarize_error()
-
-#' daily
-d_temporal_cv$daily <-
-  d[,
-    .(.N,
-      mean_pm25 = mean(conc),
-      mean_pm_pred = mean(pred),
-      mean_pm_se = sqrt(sum(se^2))),
-    by = c("s2", "date")
-  ] |>
-  add_mean_CIs_and_summarize_error()
-
-d_temporal_cv <-
-  tibble::enframe(d_temporal_cv, name = "time") |>
-  tidyr::unnest(cols = c(value))
-
-d_temporal_cv$time <-
-  d_temporal_cv$time |>
-  factor(levels = c("annual", "monthly", "weekly", "daily"))
-
-```
-
-```{r}
-d_temporal_cv |>
-  group_by(time) |>
-  summarize(
-    median_n_time_units = median(n_time_units, na.rm = TRUE),
-    median_mae = median(mae, na.rm = TRUE),
-    median_rmse = median(rmse, na.rm = TRUE),
-    median_rsq = median(rsq, na.rm = TRUE),
-    median_ci_coverage = median(as.numeric(sub("%", "", ci_coverage)), na.rm = TRUE),
-    .groups = "keep"
-  ) |>
-  knitr::kable(digits = 2) 
-
-d_temporal_cv |>
-  ggplot(aes(time, mae)) +
-  geom_boxplot() +
-  the_theme +
-  ylab(expression(paste(CV~MAE~(ug/m^3)))) +
-  xlab("Temporal Aggregation Window")
-
-d_temporal_cv |>
-  ggplot(aes(time, rsq)) +
-  geom_boxplot() +
-  the_theme +
-  ylab(expression(paste(CV~R^2))) +
-  xlab("Temporal Aggregation Window")
-
+```{r "yearly accuracies"}
+d |>
+  group_by(s2, year) |>
+  summarize(pred = mean(pred),
+            conc = mean(conc),
+            se = mean(sqrt(se^2))) |>
+  mutate(lci = pred - se * qnorm(0.025, lower.tail = FALSE),
+         uci = pred + se * qnorm(0.025, lower.tail = FALSE),
+         ci_covered = conc < uci & conc > lci) |>
+  ungroup() |>
+  nest_by(s2) |>
+  mutate(n_obs = c(nrow(data))) |>
+  filter(n_obs > 4) |>
+  mutate(mae = c(median(abs(data$conc - data$pred))),
+         rho = c(cor.test(data$conc, data$pred, method = "spearman", exact = FALSE)$estimate),
+         ci_coverage = c(sum(data$ci_covered) / length(data$ci_covered))) |>
+  ungroup() |>
+  summarize(mae = median(mae),
+            rho = median(rho),
+            ci_coverage = scales::percent(median(ci_coverage)),
+            median_n_obs_per_grouping = median(n_obs)) |>
+  knitr::kable(digits = 2)
 ```
 
 ## Median LOLO Accuracy Per Spatial Aggregation Period
 
-Level 5 s2 polygons
-
-```{r}
+```{r "spatial variation in accuracies"}
 library(s2)
-
-d_spatiotemporal_cv <-
-  d_temporal_cv |>
-  mutate(s2_ = s2_cell_parent(s2, 4)) |>
-  group_by(time, s2_) |>
-  summarise(
-    n = median(n_time_units, na.rm = TRUE),
-    mae = median(mae, na.rm = TRUE),
-    rmse = median(rmse, na.rm = TRUE),
-    rsq = median(rsq, na.rm = TRUE),
-    ci_coverage = median(as.numeric(sub("%", "", ci_coverage)), na.rm = TRUE),
-    .groups = "drop"
-    )
 
 the_map_theme <-
   the_theme +
@@ -288,16 +207,25 @@ the_map_theme <-
     legend.key.width = ggplot2::unit(0.3, "cm")
   )
 
-d_spatiotemporal_cv |> 
+d |>
+  mutate(s2_ = s2_cell_parent(s2, 5)) |>
+  nest_by(s2, s2_) |>
+  mutate(n_obs = c(nrow(data))) |>
+  filter(n_obs > 4) |>
+  mutate(mae = c(median(abs(data$conc - data$pred))),
+         rho = c(cor.test(data$conc, data$pred, method = "spearman", exact = FALSE)$estimate),
+         ci_coverage = c(sum(data$ci_covered) / length(data$ci_covered))) |>
+  group_by(s2_) |>
+  summarize(mae = median(mae),
+            s2_ = unique(s2_)) |>
   mutate(geometry = s2_cell_polygon(s2_)) |>  
   sf::st_as_sf() |>
   ggplot() +
   geom_sf(aes(fill = mae), size = 0) +
   coord_sf(crs = 5072) +
-  facet_wrap(. ~ time) +
   the_map_theme +
   scale_fill_viridis_c() +
-  theme(legend.position = c(0.83, 0.2),
+  theme(legend.position = c(0.25, 0.1),
         legend.direction = "horizontal",
         legend.title = element_text(size = 11, family = "sans"),
         legend.text = element_text(size = 11),
