--- a/inst/APPC_prediction_evaluation.Rmd
+++ b/inst/APPC_prediction_evaluation.Rmd
@@ -37,7 +37,7 @@ pred_names <-
   c("x", "y",
     "doy", "year", "month",
     "elevation_median_800", "elevation_sd_800",
-    "total_aadt_m_400", "truck_aadt_m_400",
+    "aadt_total_m_400", "aadt_truck_m_400",
     "air.2m", "hpbl", "acpcp", "rhum.2m", "vis", "pres.sfc", "uwnd.10m", "vwnd.10m",
     "impervious_400", "treecanopy_400",
     ## "merra_pm25",
