link to predict_pm25 in readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -32,7 +32,7 @@ Source files included with the package train and evaluate models that can be upd
 
 ## Example
 
-In R, create model-based predictions of ambient air pollution concentrations at exact locations on specific dates:
+In R, create model-based predictions of ambient air pollution concentrations at exact locations on specific dates using the `predict_pm25()` function:
 
 ```{r}
 appc::predict_pm25(
