--- a/README.Rmd
+++ b/README.Rmd
@@ -30,6 +30,15 @@ The appc package contains functions for generating geomarker predictors and the 
 Predictor geomarkers include weather and atmospheric information, traffic on primary roadways, urban imperviousness, wildfire smoke, industrial emissions, elevation, spatiotemporal indicators, and satellite-based aerosol diagnostics data.
 Source files included with the package train and evaluate models that can be updated with any release to use more recent AQS measurements and/or geomarker predictors.
 
+## Installing
+
+Install the development version of appc from GitHub with:
+
+```r
+# install.packages("remotes")
+remotes::install_github("geomarker-io/appc")
+```
+
 ## Example
 
 In R, create model-based predictions of ambient air pollution concentrations at exact locations on specific dates using the `predict_pm25()` function:
@@ -83,7 +92,7 @@ Spatiotemporal geomarkers are used for predicting air pollution concentrations, 
 | 🛰 satellite-based aerosol diagnostics | `get_merra_data()` |
 | 🚍 traffic densities | `get_traffic_summary()` |
 | 🏙 urban imperviousness | `get_urban_imperviousness()` |
-| 🔥 wildfire smoke | `install_smoke_pm_data()` |
+| 🔥 wildfire smoke | `get_hms_smoke_data()` |
 | 🏭 industrial emissions | `get_nei_point_summary()` |
 | 🗻 elevation | `get_elevation_summary()` |
 | 🔗 census tract identifier | `get_census_tract_id()` |
@@ -97,16 +106,18 @@ To create and release geomarker data for release assets, as well as to create th
 ```sh
 > just --list
 
-Available recipes:
-    create_report        # create CV accuracy report
-    dl_geomarker_data    # download all geomarker ahead of time, if not already cached
-    docker_test          # run tests without cached release files
-    docker_tool          # build docker image preloaded with {appc} and data
-    release_merra_data   # upload merra data to github release
-    release_model        # upload grf model to current github release
-    release_nei_data     # install nei data from source and upload to github release
-    release_smoke_data   # install smoke data from source and upload to github release
-    release_traffic_data # install traffic data from source and upload to github release
+    build_site             # build readme and webpage
+    check                  # CRAN check package
+    create_report          # create CV accuracy report
+    dl_geomarker_data      # download all geomarker ahead of time, if not already cached
+    docker_test            # run tests without cached release files
+    docker_tool            # build docker image preloaded with {appc} and data
+    release_hms_smoke_data # install smoke data from source and upload to github release
+    release_merra_data     # upload merra data to github release
+    release_model          # upload grf model to current github release
+    release_nei_data       # install nei data from source and upload to github release
+    release_smoke_data     # install smoke data from source and upload to github release
+    release_traffic_data   # install traffic data from source and upload to github release
     release_urban_imperviousness_data # install nlcd urban imperviousness data from source and upload to github release
-    train_model          # train grf model
+    train_model            # train grf model
 ```
