link to vignettes; closes #57

--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](h
 ## About
 
 The goal of the appc package is to provide daily, high resolution, near real-time, model-based ambient air pollution exposure assessments.
-This is achieved by training a generalized random forest on several geomarkers to predict daily average EPA AQS concentrations from 2017 until the present at exact locations across the contiguous United States.
+This is achieved by training a generalized random forest on several geomarkers to predict daily average EPA AQS concentrations from 2017 until the present at exact locations across the contiguous United States (see `vignette("cv-model-performance")` for more details).
 The appc package contains functions for generating geomarker predictors and the ambient air pollution concentrations.
 Predictor geomarkers include weather and atmospheric information, traffic on primary roadways, urban imperviousness, wildfire smoke, industrial emissions, elevation, spatiotemporal indicators, and satellite-based aerosol diagnostics data.
 Source files included with the package train and evaluate models that can be updated with any release to use more recent AQS measurements and/or geomarker predictors.
@@ -53,6 +53,8 @@ appc::predict_pm25(
 Installed geomarker data sources and the grf model are hosted as release assets on GitHub and are downloaded locally to the package-specific R user data
 directory (i.e., `tools::R_user_dir("appc", "data")`). These files are cached across all of an R user’s sessions and projects. (Specify an alternative download location by setting the `R_USER_DATA_DIR` environment variable; see `?tools::R_user_dir`.)
 
+See more examples in `vignette("timeline-example")`.
+
 ## S2 geohash
 
 The [s2 geohash](https://s2geometry.io/) is a [hierarchical](https://s2geometry.io/devguide/s2cell_hierarchy.html) geospatial index that uses [spherical geometry](https://s2geometry.io/about/overview). The appc package uses s2 cells via the [s2](https://r-spatial.github.io/s2/) package to specify geospatial locations.
@@ -60,26 +62,6 @@ In R, s2 cells can be [created](https://r-spatial.github.io/s2/reference/s2_cell
 
 ```{r}
 s2::s2_lnglat(c(-84.4126, -84.5036), c(39.1582, 39.2875)) |> s2::as_s2_cell()
-```
-
-## Start and stop dates example
-
-Translate start and stop dates representing a range of days into a list-col of days within each range:
-
-```{r}
-tibble::tribble(
-  ~s2, ~start_date, ~end_date,
-  "8841b39a7c46e25f", "2023-02-20", "2023-04-01",
-  "8841a45555555555", "2021-12-30", "2022-01-10"
-) |>
-  dplyr::mutate(
-    s2 = s2::as_s2_cell(s2),
-    dates = purrr::map2(
-      as.Date(start_date), as.Date(end_date),
-      \(.s, .e) seq(from = .s, to = .e, by = 1)
-    ),
-    pm25 = appc::predict_pm25(s2, dates)
-  )
 ```
 
 ## Geomarker Assessment
