--- a/vignettes/cv-model-performance.Rmd
+++ b/vignettes/cv-model-performance.Rmd
@@ -45,7 +45,7 @@ d_train <- readRDS(train_file)
 
 ## Training data
 
-`r nrow(d_train)` daily PM$_{2.5}$ measurements on `r n_distinct(d_train$date)` different days across `r n_distinct(d_train$s2)` unique stations from `r min(d_train$date)` to `r max(d_train$date)`.
+`r prettyNum(nrow(d_train), ",")` daily PM$_{2.5}$ measurements on `r prettyNum(n_distinct(d_train$date), ",")` different days across `r prettyNum(n_distinct(d_train$s2), ",")` unique stations from `r min(d_train$date)` to `r max(d_train$date)`.
 
 Measured PM$_{2.5}$ concentration ($\mu g/ m^3$) quantiles are:
 
@@ -101,11 +101,9 @@ d$month <- as.numeric(format(d$date, "%m"))
 d$week <- as.numeric(format(d$date, "%U"))
 ```
 
-Leave-one-location-out (LOLO) accuracy is calculated by using out of bag predictions from the trained random forest with resample clustering by the location.
+Leave-one-location-out (LOLO) accuracy is calculated by using out of bag predictions from the trained random forest with resample clustering by the location. Accuracy is characterized using median absolute error (`mae`) and the Spearman's correlation coefficient (`rho`). Accuracy metrics are calculated for each left out location and then summarized using the median accuracy statistic across all locations. This most closely captures the performance in a real-world scenario where we are trying to predict air pollution between 2017 and 2023 in a place where it was not measured.
 
-Accuracy metrics are calculated for each left out location and then summarized using the median accuracy statistic across all locations. This most closely captures the performance in a real-world scenario where we are trying to predict air pollution between 2017 and 2023 in a place where it was not measured. 
-
-Each left-out location, or AQS monitor, contains a variable number of days with air pollution measurements.  This depends on the frequency of the daily measurements as well as when the monitoring station was initiated or deprecated. Some stations-time groupings only have a single measurement; exclude any station or station-time grouping that has 4 or less observations.
+Each left-out location, or AQS monitor, contains a variable number of days with air pollution measurements.  This depends on the frequency of the daily measurements as well as when the monitoring station was initiated or deprecated. Some stations-time groupings only have a single measurement; exclude any station or station-time grouping that has 4 or less observations. In the tables below, `median_n` represents the median number of observations used in each station grouping to calculate the overall median accuracy metrics. `ci_coverage` is the percentage of the time that the 95% CI interval of the predicted concentration contained the measured concentration.
 
 ### Daily
 
@@ -121,7 +119,7 @@ d |>
   summarize(mae = median(mae),
             rho = median(rho),
             ci_coverage = scales::percent(median(ci_coverage)),
-            median_n_obs_per_grouping = median(n_obs)) |>
+            median_n = median(n_obs)) |>
   knitr::kable(digits = 2)
 ```
 
@@ -155,7 +153,7 @@ d |>
   summarize(mae = median(mae),
             rho = median(rho),
             ci_coverage = scales::percent(median(ci_coverage)),
-            median_n_obs_per_grouping = median(n_obs)) |>
+            median_n = median(n_obs)) |>
   knitr::kable(digits = 2)
 ```
 
@@ -183,7 +181,7 @@ d |>
   summarize(mae = median(mae),
             rho = median(rho),
             ci_coverage = scales::percent(median(ci_coverage)),
-            median_n_obs_per_grouping = median(n_obs)) |>
+            median_n = median(n_obs)) |>
   knitr::kable(digits = 2)
 ```
 
@@ -211,11 +209,13 @@ d |>
   summarize(mae = median(mae),
             rho = median(rho),
             ci_coverage = scales::percent(median(ci_coverage)),
-            median_n_obs_per_grouping = median(n_obs)) |>
+            median_n = median(n_obs)) |>
   knitr::kable(digits = 2)
 ```
 
-## Median LOLO Accuracy Per Spatial Aggregation Period
+### Median LOLO Accuracy Per Spatial Aggregation Period
+
+Station-specific estimates of crossvalidated MAE and Rho were spatially aggregated to level 5 s2 cells and summarized. The visualized result is a rough approximation of how model performance may differ in different parts of the country:
 
 ```{r "spatial variation in accuracies"}
 library(s2)
